<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.neo.neoapp.MainActivity" >
    <!--<item android:id="@+id/menu_webbrowser"
        		  android:orderInCategory="1"
        		  android:title="@string/intent_menu_webbrowser"
        		  android:icon="@drawable/"
        		  android:alphabeticShortcut="a"
        		  android:visible="true"
        		  >
                
    </item>-->
	<group android:id="@+id/menu_basic"
	    	android:checkableBehavior="none"
	    	android:menuCategory="secondary">
    <item
        android:id="@+id/menu_intent"
        android:title="@string/intent_menu"
        android:orderInCategory="1">
        <menu>
            <item android:id="@+id/menu_webbrowser"
        		  android:orderInCategory="1"
        		  android:title="@string/intent_menu_webbrowser">
                
            </item>
            <item android:id="@+id/menu_websearch"
        		  android:orderInCategory="2"
        		  android:title="@string/intent_menu_websearch">
                
            </item>
            <item android:id="@+id/menu_dial"
        		  android:orderInCategory="3"
        		  android:title="@string/intent_menu_dial">
                
            </item>
            <item android:id="@+id/menu_map"
        		  android:orderInCategory="4"
        		  android:title="@string/intent_menu_map">
                
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_db"
        android:title="@string/db_menu"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	</group>
	
	<!-- for weixin or other apps -->
	<item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/actionbar_search_icon"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
 
    <item
        android:id="@+id/action_group_chat"
        android:icon="@drawable/menu_group_chat_icon"
        android:title="@string/menu_group_chat"/>
    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/menu_add_icon"
        android:title="@string/menu_addfriend"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/men_scan_icon"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/menu_feedback_icon"
        android:title="@string/menu_feedback"/>
</menu>
