<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:neo="http://schemas.android.com/apk/res/com.neo.neoapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <!-- 底部布局 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <com.neo.neoapp.UI.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            neo:color="#ff45c01a"
            neo:icon="@drawable/ic_menu_start_conversation"
            neo:text="@string/app_name"
            neo:text_size="12sp" />

        <com.neo.neoapp.UI.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            neo:color="#ff45c01a"
            neo:icon="@drawable/ic_menu_friendslist"
            neo:text="@string/tab_contact"
            neo:text_size="12sp" />

        <com.neo.neoapp.UI.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            neo:color="#ff45c01a"
            neo:icon="@drawable/ic_menu_emoticons"
            neo:text="@string/tab_found"
            neo:text_size="12sp" />

        <com.neo.neoapp.UI.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            neo:color="#ff45c01a"
            neo:icon="@drawable/ic_menu_allfriends"
            neo:text="@string/tab_me"
            neo:text_size="12sp" />
    </LinearLayout>

</LinearLayout>
